intial design of parameters support (#116)
* intial design of parameters support

# Conflicts:
#	roadrunner-api/src/main/java/module-info.java
#	roadrunner-cli/src/main/java/io/roadrunner/cli/RunCommand.java
#	roadrunner-core/src/main/java/io/roadrunner/core/Bootstrap.java
#	roadrunner-core/src/main/java/io/roadrunner/core/internal/ClosedWorldStrategy.java
#	roadrunner-core/src/main/java/io/roadrunner/core/internal/DefaultRoadrunner.java
#	roadrunner-core/src/main/java/io/roadrunner/core/internal/ExecutionStrategy.java
#	roadrunner-core/src/main/java/io/roadrunner/core/internal/OpenWorldStrategy.java
#	roadrunner-core/src/test/java/io/roadrunner/core/internal/OpenWorldStrategyTest.java
#	roadrunner-sampler-neo4j/src/it/java/io/roadrunner/samplers/neo4j/Neo4jSamplerPluginIT.java

* code cleanup and unified prefixed map argument parsing

* unified parameters feed handling

* rafactored sampler parameters

* fixes after merge

* finish parameters refactor after rebase

Consolidates post-rebase work for the sampler-parameters feature:

- SamplerParameters: rename EMPTY -> NONE, switch to LinkedHashMap for
  ordered access, add of(Map) and of(key, value) factories, add forEach
  iteration via IndexedParameterSink (TODO: typed values vs raw strings)
- IndexedParameterSink: new functional interface (i, Class, value) for
  indexed iteration (currently used by JDBC sampler binding)
- ParameterFeed / ParameterSource: clarify implementor contract -
  implementors return a finite single-threaded feed; the engine drains
  it once and re-publishes through PreloadedParameterFeed, which owns
  thread-safety, cycling, and hot-path allocation concerns
- SamplerResponse.Error: add toString() for diagnostics
- Adapt samplers (JDBC, Neo4j) and their ITs (AB, JDBC, MySQL,
  PostgreSQL, Neo4j) to the new Sampler.execute(SamplerParameters)
  signature
- Add CsvParameterSourceTest unit coverage

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>

* SamplerParameters.of(Map