@@ -21,8 +21,6 @@ import io.roadrunner.api.latency.LatencyRecorder;
 import io.roadrunner.api.samplers.Sampler;
 import io.roadrunner.api.samplers.SamplerProvider;
 import java.util.concurrent.CountDownLatch;
-import java.util.concurrent.ExecutionException;
-import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicLong;
@@ -49,17 +47,19 @@ public final class ClosedWorldStrategy implements ExecutionStrategy {
 
     @Override
     public void execute(
-            SamplerProvider samplerProvider, QueueingSamplerResponsesJournal journal, LatencyRecorder recorder)
+            SamplerProvider samplerProvider,
+            ParameterCarousel parameterFeed,
+            QueueingSamplerResponsesJournal journal,
+            LatencyRecorder recorder)
             throws InterruptedException {
         var delayedSupplier = new DelayedSupplier<>(samplerProvider::newSampler, () -> 20L);
         try (var usersExecutor = Executors.newThreadPerTaskExecutor(
-                        Thread.ofVirtual().name("roadrunner-users-").factory());
-                var requestsExecutor = Executors.newCachedThreadPool(
-                        Thread.ofVirtual().name("roadrunner-requests-").factory())) {
+                Thread.ofVirtual().name("roadrunner-users-").factory())) {
             var latch = new CountDownLatch(concurrentUsers);
             var measurementControl = new MeasurementControl(requests, journal, latch);
             for (int i = 0; i < concurrentUsers; i++) {
-                usersExecutor.submit(new RoadrunnerUser(measurementControl, delayedSupplier.get(), requestsExecutor));
+                usersExecutor.submit(
+                        new RoadrunnerUser(measurementControl, delayedSupplier.get(), parameterFeed, recorder));
             }
             latch.await();
             usersExecutor.shutdown();
@@ -70,13 +70,18 @@ public final class ClosedWorldStrategy implements ExecutionStrategy {
     private static class RoadrunnerUser implements Runnable {
         private final MeasurementControl measurementControl;
         private final Sampler sampler;
-        private final ExecutorService requestsExecutor;
+        private final ParameterCarousel parameters;
+        private final LatencyRecorder recorder;
 
         private RoadrunnerUser(
-                MeasurementControl measurementControl, Sampler sampler, ExecutorService requestsExecutor) {
+                MeasurementControl measurementControl,
+                Sampler sampler,
+                ParameterCarousel parameters,
+                LatencyRecorder recorder) {
             this.measurementControl = measurementControl;
             this.sampler = sampler;
-            this.requestsExecutor = requestsExecutor;
+            this.parameters = parameters;
+            this.recorder = recorder;
         }
 
         @Override
@@ -87,8 +92,7 @@ public final class ClosedWorldStrategy implements ExecutionStrategy {
                     try {
                         // when the next request should start
                         long scheduledStartTime = System.nanoTime();
-                        // execute the request
-                        var response = requestsExecutor.submit(sampler::execute).get();
+                        var response = sampler.execute(parameters.next());
                         // calculate delay from the intended start time
                         var inQueueTime = response.timestamp() - scheduledStartTime;
                         // calculate the service time (actual execution time)
@@ -99,12 +103,13 @@ public final class ClosedWorldStrategy implements ExecutionStrategy {
                         var correctedLatency = serviceTime + inQueueTime;
                         measurementControl.request(response.withScheduledStartTime(scheduledStartTime)
                                 .withLatency(correctedLatency));
-                    } catch (InterruptedException e) {
-                        Thread.currentThread().interrupt();
+                        recorder.record(correctedLatency);
+                    } catch (Exception e) {
                         measurementControl.error(e);
-                        break;
-                    } catch (ExecutionException e) {
-                        measurementControl.error(e);
+                        if (e instanceof InterruptedException || e.getCause() instanceof InterruptedException) {
+                            Thread.currentThread().interrupt();
+                            break;
+                        }
                     }
                 }
             } finally {
@@ -133,7 +138,7 @@ public final class ClosedWorldStrategy implements ExecutionStrategy {
             responsesJournal.userEnters(UserEvent.enter());
         }
 
-        public void request(SamplerResponse response) {
+        public void request(SamplerResponse<?> response) {
             counter.decrementAndGet();
             responsesJournal.response(response);
         }
